--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -237,8 +238,8 @@
                 </div>
             </div>
 
-            <div class="row ptb-25">
-                <div class="col-md-4 row header">
+            <div class="row ptb-25 ">
+                <div class="col-md-4 row header ser-center">
                     <h2 class="text-poppins text-white mb-3">What We Do</h2>
                     <p class="text-source-sans-3 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Aliquam ipsam ullam incidunt itaque nemo omnis temporibus totam quibusdam repellat vero,
@@ -259,7 +260,6 @@
                     <p><i class="fa-regular fa-circle-check mx-2"></i>Social media design</p>
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <!-- Service Section ---------------------------------------------------------->
@@ -353,7 +353,7 @@
     <!-- Works Section----------------------------------------------------------->
     <section id="Works" class="works-sec bg-w-grey">
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <div class="header text-center text-poppins text-uppercase ">
                     <h6 class="fs-13 fw-medium">Happy Customers</h6>
                 </div>
@@ -411,6 +411,7 @@
                     </button>
                 </div>
             </div>
+        </div>
     </section>
     <!-- Works Section----------------------------------------------------------->
     <!-- Contact Section----------------------------------------------------------->
@@ -460,7 +461,7 @@
     <!-- Contact Section----------------------------------------------------------->
 
     <!-- js -->
-    <!-- BootstrapG -->
+    <!-- Bootstrap -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- js -->
 </body>
